# sst-cam-firmware

./: .clang-tidy  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Cargo.toml  DEVELOPMENT.md  README.md  compile_commands.json  conanfile.py  conanfile.txt  dependencies.sh  justfile  pyproject.toml  release-please-config.json  ruff.toml  sst_vscode_dev_launcher.cmd  uv.sh  vcpkg-configuration.json  vcpkg.json
.claude/: settings.json  settings.local.json
.devcontainer/: .bashrc  Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/script/: initialize-command.sh  on-create.sh  post-attach.sh  post-create.sh  post-start.sh
.devcontainer/sysroot/: 002_fix_sysroot.sh  003_install_extra_pkgs.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release-please.yml  release.yml
_install/: msvc.md
_old/: main.py
_old/common/logger/: logger.cpp  logger.hpp
_old/config/device/: device.py
_old/test/: test_calibration.py  test_single_camera.py
cmake/: FindGStreamer.cmake  FindOpenCV.cmake  SetGStreamer.cmake  SetGStreamerRuntime.cmake  cmake.md  conan_provider.cmake
cmake/conan/: conan.md
cmake/msvc/: msvc.md
cmake/msys2/: msys2.md
cmake/toolchains/: jetson-orin-jetpack_6.2-l4t_36.5.cmake  jetson-r36.5.cmake
conan/profiles/: cross  jetson-aarch64-target.profile  jetson-r36.5  jetson-r36.5-cross  linux-x86_64-host.profile  ubuntu  wsl-ubuntu
config/: calibration.json  device.json  profile.json  storage.json  stream.json  users.json  wifi-direct.json
db/: schema.dbml  schema.dbml.dbdiagram  schema.sql
db/migrations/: 001_initial.sql
db/seeds/: 001_defaults.sql
deploy/: README.md  install.sh  sst-cam-firmware.service
docker/: Dockerfile  Dockerfile.cross  docker-compose.cross.yml
docker/scripts/: 001_unpack_l4t.sh  003_install_extra_pkgs.sh
docs/: ROADMAP.md  architecture.md  pipeline.md
docs/brainstorms/: 2026-06-04-app-source-of-truth-firmware-refactor-requirements.md  2026-06-08-app-firmware-logic-alignment-requirements.md  2026-06-10-hardware-demo-firmware-requirements.md  ci-cd-release-pipeline-requirements.md
docs/cross-repo/: README.md
docs/cross-repo/app/: 2026-06-08-overlay-pixel-parity-contract.md  context.md  coordination.md
docs/cross-repo/proto/: 2026-06-08-gatt-uuids-and-overlay-semantics.md  context.md  coordination.md
docs/plans/: 2026-06-08-001-refactor-app-source-of-truth-firmware-plan.md  2026-06-09-001-feat-logic-alignment-firmware-plan.md  2026-06-10-001-feat-ci-cd-release-pipeline-plan.md  2026-06-10-001-feat-hardware-demo-pipeline-firmware-plan.md
docs/solutions/architecture-patterns/: non-blocking-sink-with-async-stop-2026-06-10.md
docs/solutions/logic-errors/: proto-contract-logic-alignment-2026-06-09.md
docs/solutions/tooling-decisions/: cpp-rewrite-promotion-to-main-2026-06-09.md
include/config/adapters/: json_adapter.hpp
include/config/domain/: calibration_config.hpp  config_files.hpp  device_config.hpp  profile_config.hpp  storage_config.hpp  stream_config.hpp  stream_config_json.hpp  users_config.hpp  users_config_json.hpp
include/config/ports/: config_file_repository.hpp
include/domain/config/: calibration_config.hpp  device_config.hpp  profile_config.hpp  storage_config.hpp  stream_config.hpp  users_config.hpp
scripts/: bootstrap-cross-compiling.sh  bootstrap-jetson-r36.5-toolchain.sh  install-dependecies.sh  install-toolchain.sh  sst-cam-firmware.cmd  task_parse.cmd
scripts/bootstrap-target-rootfs/: jetson-r36.5.sh
scripts/bootstrap-toolchain/: ubuntu.sh  wsl-ubuntu.sh
src/: lib.rs  main.cpp  main.py  main.rs
src/adapters/config/: json-opt.hpp
src/app/interfaces/: __init__.py  camera.py  stream.py  tracking.py
src/app/models/: __init__.py
src/app/overlay/: binding-sync.hpp  overlay-proto-mapper.cpp  overlay-proto-mapper.hpp
src/capture/adapters/: gstreamer.cpp  gstreamer.hpp  gstreamer_runtime.hpp
src/capture/domain/: frame.hpp
src/capture/ports/: capture.hpp
src/common/: logger.rs
src/common/domain/: image_orientation.hpp  pixel_format.hpp  timestamp.hpp
src/config/: manager.rs  mod.rs  profile.toml  settings.py
src/config/adapters/: json_adapter.hpp  json_config_file_repository.cpp
src/config/app/: config_loader.cpp  config_loader.hpp  user_loader.hpp
src/config/calibration/: calibration.default.toml  calibration.rs
src/config/camera/: __init__.py  camera.py  capture_format.py  lense.py  sensor.py  (+3 more)
src/test/: test_zoom_no_feed.py
test/: test_cv.py  test_dual_camera.py  test_focal_point.py  test_tracking_no_feed.py
tests/buffer/: drop_oldest_ring.test.cpp  fan_out_sink.test.cpp  latest_only_slot.test.cpp  materialize_frame.test.cpp
tests/control/: ble_advertisement.test.cpp  camera_controller.test.cpp  chunk_assembler.test.cpp  command_dispatcher.test.cpp  control_plane_integration.test.cpp  device_handler.test.cpp  download_handler.test.cpp  match_controller_browse.test.cpp  match_handler.test.cpp  match_state_handler.test.cpp  raw_capture_handler.test.cpp  recording_handler.test.cpp  sport_controller.test.cpp  system_controller.test.cpp  team_controller.test.cpp  thumbnail_handler.test.cpp  wifi_direct_handler.test.cpp  wpa_p2p_parse.test.cpp  wpa_wifi_manager.test.cpp
tests/decision/: static_decision.test.cpp
tests/match/: match_service.test.cpp
tests/network/: download_server.test.cpp
tests/overlay/: cairo_renderer.test.cpp  frame_compositor.test.cpp  gst_overlay_e2e.test.cpp  overlay_controller.test.cpp  overlay_proto_mapper.test.cpp  overlay_scene.test.cpp
tests/pipeline/: pipeline_orchestrator.test.cpp
tests/processing/: synthetic_frames.hpp
tests/proto/: proto_roundtrip.test.cpp
tests/session/: session_manager.test.cpp
tests/storage/: continuous_recorder.test.cpp  filesystem_disk_guard.test.cpp  gst_continuous_e2e.test.cpp  gst_pipeline_e2e.test.cpp  jpeg_encoder.test.cpp  raw_capture_naming.test.cpp  raw_capture_sink.test.cpp  recording_service.test.cpp  thumbnail_writer.test.cpp
tests/streaming/: gst_adapters_e2e.test.cpp  streaming_handler.test.cpp  streaming_service.test.cpp
(+639 files in other folders)
