[package]
name = "sst-cam-firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.7"
once_cell = "1.21.3"
parking_lot = "0.12.4"

[target.aarch64-unknown-linux-gnu]
linker = "gcc"
