[project]
name = "sst-cam-firmware"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "av>=14.4.0",
  "ffmpeg-python>=0.2.0",
  "numpy<2.0",
  "setproctitle>=1.3.6",
  "ultralytics>=8.3.158",
  "opencv-python-headless",
]
[project.optional-dependencies]
rpi = ["picamera2"]
jetson = []
[dependency-groups]
dev = [
  "jupyter>=1.1.1",
  "matplotlib>=3.10.3",
  { include-group = "lint" },
  { include-group = "test" },
  { include-group = "stubs" },
]
lint = ["ruff>=0.11.12"]
test = ["pytest>=8.4.1"]
stubs = ["opencv-stubs>=0.0.11"]
