[project]
name = "sst-cam-firmware"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "av>=14.4.0",
  "numpy",
  "setproctitle>=1.3.6",
  "ultralytics",
  "opencv-python-headless",
]
[dependency-groups]
dev = [
  "jupyter>=1.1.1",
  "matplotlib>=3.10.3",
  { include-group = "lint" },
  { include-group = "test" },
  { include-group = "stubs" },
]
lint = ["ruff>=0.11.12"]
test = ["pytest>=8.4.1"]
stubs = ["opencv-stubs>=0.0.11"]

[tool.uv]
default-groups = ["dev"]
